[bugfix] adding horizontal scroll for giant report tables

--- a/www/vfamatching.dev/public/css/style.css
+++ b/www/vfamatching.dev/public/css/style.css
@@ -344,6 +344,10 @@ table tr th:hover {
     display: inline;
 }
 
+.table-responsive {
+    overflow-x: scroll;
+}
+
 @media (min-width: 992px){ /*Laptop and Desktop*/
     #highlights {
         margin-top: 20px;
